work page figur

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -119,8 +119,9 @@
                 // margin: .5rem auto 1rem;
 
                 border-radius: .5rem;
-                overflow-x: hidden;
-                overflow-y: auto;
+                // overflow-x: hidden;
+                // overflow-y: auto;
+                overflow: hidden;
                 // border: 1px solid #0004;
                 padding: 10vh 10vw;
                 padding: 1rem;
