--- a/css/style.css
+++ b/css/style.css
@@ -2779,8 +2779,7 @@ hamburger
   width: 100%;
   height: 50vh;
   border-radius: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   padding: 10vh 10vw;
   padding: 1rem;
   border-radius: 0.5rem;
