--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -528,7 +528,7 @@ hamburger
         height: 100%;
         top: 0;
         left: 0;
-        background: $overlay-dark;
+        background: $overlay-blue-darkest;
         z-index: -1;
         animation: zoom-out 2s ease 4s forwards;
         @keyframes zoom-out {
