--- a/sass/style.scss
+++ b/sass/style.scss
@@ -75,15 +75,24 @@ section {
     max-width: 100vw;
     margin: 5vh 0 10vh;
     // border: 2px solid red;
+    overflow: hidden;
     text-transform: uppercase;
-    letter-spacing: .1em;
+    letter-spacing: .1rem;
     text-align: center;
     // padding: .5em;
     font-family: $font-ubuntu;
     font-family: $font-title;
-    -webkit-box-reflect: below -.5rem linear-gradient(transparent, #0004);
+    -webkit-box-reflect: below -1rem linear-gradient(transparent, #0003);
 
-    
+    &.io-item {
+        opacity: 0;
+        letter-spacing: .25rem;
+        transition: 1s;
+    }
+    &.active-item {
+        opacity: 1;
+        letter-spacing: .125rem;
+    }
 }
 }
 // SECTION IMAGE PAD 
