--- a/css/style.css
+++ b/css/style.css
@@ -2779,6 +2779,8 @@ hamburger
   right: -1.5rem;
   bottom: 0;
   font-weight: 600;
+  font-size: 1rem;
+  color: #dc143c;
   transition: 0.25s;
   font-family: "Font Awesome 6 Free";
 }
@@ -2786,8 +2788,8 @@ hamburger
   color: #000;
 }
 .work .work-items .work-item .work-title p a:hover::after {
-  color: #dc143c;
-  transform: scale(1.15);
+  color: #000;
+  transform: translateX(0.25rem);
 }
 .work .work-items .work-item figure {
   width: 20rem;
