work-item arrow

--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -6,9 +6,11 @@
         justify-content: start;
         width: 100%;
         margin: 0 auto;
-        padding-bottom: 30px;
+        // padding-bottom: 30px;
+        padding: 5vh 0;
         position: relative;
         transform-style: preserve-3d;
+        // border: 2px solid red;
         // section-title
         .contact-header {
             width: 100%;
