--- a/css/style.css
+++ b/css/style.css
@@ -2225,7 +2225,7 @@ hamburger
   justify-content: start;
   width: 100%;
   margin: 0 auto;
-  padding-bottom: 30px;
+  padding: 5vh 0;
   position: relative;
   transform-style: preserve-3d;
 }
@@ -2728,7 +2728,13 @@ hamburger
     height: 5rem;
     background: rgba(0, 0, 0, 0.2);
     z-index: -1;
+    animation: arrow 5s infinite;
     transform: translateY(-50%) rotate(45deg);
+  }
+  @keyframes arrow {
+    50% {
+      transform: translateX(-1rem) translateY(-50%) rotate(45deg);
+    }
   }
 }
 @media (min-width: 768px) {
@@ -2738,6 +2744,10 @@ hamburger
   .work .work-items .work-item::after {
     display: none;
   }
+}
+.work .work-items .work-item:hover::after {
+  opacity: 0;
+  transition: 1s;
 }
 .work .work-items .work-item .work-title {
   text-align: center;
