--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,7 @@ hamburger
   background: #15191e;
   z-index: -1;
   opacity: 0;
-  transition: 0.25s;
+  transition: 0.5s;
 }
 @media (min-width: 1024px) {
   .header {
@@ -574,8 +574,14 @@ hamburger
     overflow: hidden;
   }
 }
-.header.hero-header .navbar {
-  background: transparent;
+.header.hero-header::after {
+  transform: translateY(-9vh);
+  opacity: 1;
+}
+@media (min-width: 768px) {
+  .header.hero-header::after {
+    transform: translateY(-15vh);
+  }
 }
 .header.hero-header .navbar #nav .logo {
   transform: translateY(-10vh);
@@ -586,6 +592,7 @@ hamburger
 }
 .header.header-io::after {
   opacity: 1;
+  transform: translateY(0);
 }
 @media (min-width: 1024px) {
   .header.header-io {
