--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -19,7 +19,7 @@
         background: $overlay-blue-darkest;
         z-index: -1;
         opacity: 0;
-        transition: .25s;
+        transition: .5s;
     }
     // DESKTOP HEADER HEIGHT
     @media (min-width: 1024px) {
@@ -28,11 +28,19 @@
         overflow: hidden;
     }
     // INTERSECTION CLASS
-    // HERO IO
+    // HERO = IO
     // TRANSPARENT BACKGROUND AND NO LOGO IN DISPLAY
     &.hero-header {
+        &::after {
+            transform: translateY(-9vh);
+            opacity: 1;
+            // PSUEDO BG HEIGHT ON DESKTOP
+            @include md {
+                transform: translateY(-15vh);
+            }
+        }
         .navbar {
-            background: transparent;
+            // background: transparent;
             #nav {
                 .logo {
                     transform: translateY(-10vh);
@@ -47,6 +55,7 @@
         transition: all .25s;
         &::after {
             opacity: 1;
+            transform: translateY(0);
         }
         @media (min-width: 1024px) {
             height: 8vh;
