--- a/css/style.css
+++ b/css/style.css
@@ -350,8 +350,10 @@ hamburger
   place-items: center;
   place-content: center;
   border-radius: 0.25rem;
+  opacity: 0;
   transition: 0.25s;
   position: relative;
+  transform: translateY(1rem);
 }
 .bottom-nav .link-item i {
   font-size: 1rem;
@@ -388,6 +390,20 @@ hamburger
 }
 .bottom-nav.active-bottom-nav {
   transform: translateY(0vh);
+}
+.bottom-nav.active-bottom-nav .link-item {
+  transform: translateY(0);
+  opacity: 1;
+  transition: 0.5s;
+}
+.bottom-nav.active-bottom-nav .link-item:nth-child(1) {
+  transition-delay: 0.25s;
+}
+.bottom-nav.active-bottom-nav .link-item:nth-child(2) {
+  transition-delay: 0.5s;
+}
+.bottom-nav.active-bottom-nav .link-item:nth-child(3) {
+  transition-delay: 0.75s;
 }
 
 .skip-link {
