--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,12 +86,12 @@ section {
 
     &.io-item {
         opacity: 0;
-        letter-spacing: .5rem;
+        transform: scale(.8) translateY(5vh);
         transition: 1s;
     }
     &.active-item {
         opacity: 1;
-        letter-spacing: .125rem;
+        transform: scale(1) translateY(0);
     }
 }
 }
