--- a/css/style.css
+++ b/css/style.css
@@ -1828,9 +1828,9 @@ hamburger
   flex-direction: column;
   justify-content: flex-start;
   text-align: center;
-  background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   background: #fff;
   min-height: auto;
+  padding: 5vh 0;
 }
 #skills .skills-header {
   width: 100%;
@@ -1846,7 +1846,7 @@ hamburger
     display: none;
   }
 }
-#skills .skills-intro {
+#skills .skills .skills-intro {
   text-align: left;
   margin: 0 auto 0;
   padding: 2.5vh 2.5vw 0 5vw;
@@ -1854,13 +1854,13 @@ hamburger
   z-index: 30;
 }
 @media (min-width: 768px) {
-  #skills .skills-intro {
+  #skills .skills .skills-intro {
     width: 100%;
     padding: 5vh 5vw 0;
     text-align: center;
   }
 }
-#skills .skills-intro .skills-article p {
+#skills .skills .skills-intro .skills-article p {
   color: #f4f4f4;
   color: #29323c;
   font-size: 0.925rem;
@@ -1870,54 +1870,45 @@ hamburger
   overflow: hidden;
 }
 @media (min-width: 768px) {
-  #skills .skills-intro .skills-article p {
+  #skills .skills .skills-intro .skills-article p {
     font-size: 1rem;
   }
 }
-#skills .skills-intro .skills-article p span {
+#skills .skills .skills-intro .skills-article p span {
   font-size: 0.95rem;
   font-weight: 700;
   color: inherit;
 }
-#skills .skills-intro .skills-drop {
+#skills .skills .skills-intro .skills-drop {
   text-align: left;
   color: #ead2a1;
 }
 @media (min-width: 820px) {
-  #skills .skills-intro .skills-drop {
+  #skills .skills .skills-intro .skills-drop {
     text-align: center;
   }
 }
-#skills .skills-intro .skills-drop .skills-drop-p {
+#skills .skills .skills-intro .skills-drop .skills-drop-p {
   font-weight: 500;
   font-size: 0.95rem;
 }
-#skills .skills-intro.io-item {
-  opacity: 0;
-  transform: translateY(1rem);
-  transition: 1.5s;
-}
-#skills .skills-intro.active-item {
-  opacity: 1;
-  transform: translateY(0);
-}
-#skills .dropdown {
+#skills .skills .dropdown {
   position: relative;
   margin: 0 auto;
   z-index: 4;
   width: 100%;
 }
-#skills .dropdown.io-item {
+#skills .skills .dropdown.io-item {
   transform: scale(1) translateY(5vh);
   opacity: 0;
   transition: 1s;
 }
-#skills .dropdown.active-item {
+#skills .skills .dropdown.active-item {
   opacity: 1;
   transition: 1.5s;
   transform: scale(1) translateY(0);
 }
-#skills .dropdown .dropbtn {
+#skills .skills .dropdown .dropbtn {
   padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
@@ -1945,20 +1936,20 @@ hamburger
   isolation: isolate;
 }
 @media (min-width: 768px) {
-  #skills .dropdown .dropbtn {
+  #skills .skills .dropdown .dropbtn {
     margin: 2.5vh auto;
     width: 20rem;
     padding: 0.5rem 1rem;
   }
 }
-#skills .dropdown .dropbtn i {
+#skills .skills .dropdown .dropbtn i {
   font-weight: 600;
   margin-left: 0.5rem;
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.7);
   transition: 0.5s;
 }
-#skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
+#skills .skills .dropdown .dropbtn::before, #skills .skills .dropdown .dropbtn::after {
   position: absolute;
   content: "";
   z-index: -1;
@@ -1971,41 +1962,41 @@ hamburger
   outline: none;
   transition: 0.2s;
 }
-#skills .dropdown .dropbtn::before {
+#skills .skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
-#skills .dropdown .dropbtn::after {
+#skills .skills .dropdown .dropbtn::after {
   background: linear-gradient(0deg, #485563, #20262e);
   opacity: 0;
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
 }
-#skills .dropdown .dropbtn.active {
+#skills .skills .dropdown .dropbtn.active {
   transform: scale(0.98);
   letter-spacing: normal;
   color: rgba(255, 255, 255, 0.7);
 }
-#skills .dropdown .dropbtn.active i {
+#skills .skills .dropdown .dropbtn.active i {
   color: #f4f4f4;
 }
-#skills .dropdown .dropbtn.active::before {
+#skills .skills .dropdown .dropbtn.active::before {
   opacity: 0;
 }
-#skills .dropdown .dropbtn.active::after {
+#skills .skills .dropdown .dropbtn.active::after {
   opacity: 1;
 }
 @media (min-width: 768px) {
-  #skills .dropdown .dropbtn:hover {
+  #skills .skills .dropdown .dropbtn:hover {
     color: rgba(255, 255, 255, 0.7);
   }
-  #skills .dropdown .dropbtn:hover::before {
+  #skills .skills .dropdown .dropbtn:hover::before {
     opacity: 0.8;
   }
-  #skills .dropdown .dropbtn:hover i {
+  #skills .skills .dropdown .dropbtn:hover i {
     color: #f4f4f4;
   }
 }
-#skills .dropdown .dropdown-content {
+#skills .skills .dropdown .dropdown-content {
   display: none;
   width: 100%;
   z-index: 1;
@@ -2013,33 +2004,33 @@ hamburger
   position: relative;
   padding: 10vh 5vw;
 }
-#skills .dropdown .dropdown-content.show {
+#skills .skills .dropdown .dropdown-content.show {
   display: block;
 }
 @media (min-width: 820px) {
-  #skills .dropdown .dropdown-content {
+  #skills .skills .dropdown .dropdown-content {
     padding: 10vh 5vw;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom {
+#skills .skills .dropdown .dropdown-content .skills-bottom {
   /*items wrapped onto multiple lines*/
   display: grid;
   grid-template-columns: 1fr;
   gap: 10vh;
 }
 @media (min-width: 576px) {
-  #skills .dropdown .dropdown-content .skills-bottom {
+  #skills .skills .dropdown .dropdown-content .skills-bottom {
     gap: 1.5rem;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media (min-width: 768px) {
-  #skills .dropdown .dropdown-content .skills-bottom {
+  #skills .skills .dropdown .dropdown-content .skills-bottom {
     gap: 1.5rem;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item {
   flex-basis: 100%;
   width: 100%;
   display: flex;
@@ -2060,26 +2051,26 @@ hamburger
   isolation: isolate;
 }
 @media (min-width: 576px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item {
     padding: 1rem 0.5rem 0.5rem 1.5rem;
   }
 }
 @media (min-width: 820px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item {
     padding: 1rem 0.5rem 1rem 2rem;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item[data-scroll=in] {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item[data-scroll=in] {
   transition: 1.5s;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item ul {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul {
   margin: 0;
   padding: 0;
   z-index: 5;
   height: 50%;
   width: 100%;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
   color: #fff;
   font-size: 1rem;
   text-align: left;
@@ -2087,18 +2078,18 @@ hamburger
   text-transform: capitalize;
 }
 @media (min-width: 820px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
     font-size: 0.85rem;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item ul li a {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul li a {
   color: #f4f4f4;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item ul li::marker {
   color: rgba(255, 255, 255, 0.7);
   color: #fff4;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item::after {
   content: "";
   position: absolute;
   left: 0;
@@ -2110,7 +2101,7 @@ hamburger
   opacity: 0.8;
   z-index: -1;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item:before {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item:before {
   position: absolute;
   content: "";
   top: 0;
@@ -2121,7 +2112,7 @@ hamburger
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.15), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 4px 4px 4px rgba(0, 0, 0, 0.15);
   z-index: 2;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
   display: grid;
   place-items: center;
   height: 4rem;
@@ -2135,27 +2126,27 @@ hamburger
   isolation: isolate;
 }
 @media (min-width: 576px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
     padding: 10px;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
   width: 80%;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
   color: #ead2a1;
   font-size: 2rem;
 }
 @media (min-width: 576px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
     height: 4rem;
     width: 4rem;
   }
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
     font-size: 2.25rem;
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before, #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before, #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
   position: absolute;
   content: "";
   top: 0;
@@ -2164,7 +2155,7 @@ hamburger
   height: 100%;
   border-radius: 50%;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
   z-index: -1;
   box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.125), inset -2px -2px 5px rgba(0, 0, 0, 0.125), 3px 3px 4px rgba(0, 0, 0, 0.125);
   animation: skill-icon 10s linear infinite;
@@ -2180,12 +2171,12 @@ hamburger
     box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.15), inset -2px 0px 5px rgba(0, 0, 0, 0.15), -2px 2px 4px rgba(0, 0, 0, 0.125);
   }
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
   background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   z-index: -2;
   opacity: 1;
 }
-#skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
+#skills .skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
   font-size: 1.25rem;
   font-weight: 400;
   color: #ead2a1;
@@ -2194,27 +2185,39 @@ hamburger
   font-family: "Kanit", sans-serif;
 }
 @media (min-width: 820px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
     font-size: 1.25rem;
   }
 }
 @media (min-width: 768px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item {
     height: auto;
   }
 }
 @media (min-width: 1024px) {
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item {
     width: 100%;
     margin: 0;
     pointer-events: visible;
     cursor: pointer;
     transition: 0.2s;
   }
-  #skills .dropdown .dropdown-content .skills-bottom .skills-item:hover {
+  #skills .skills .dropdown .dropdown-content .skills-bottom .skills-item:hover {
     transition: 0.2s;
     transform: scale(1.0255);
   }
+}
+#skills .skills .io-container.io-item .skills-intro, #skills .skills .io-container.io-item .dropdown {
+  opacity: 0;
+  transform: translateY(5vh);
+  transition: 1s;
+}
+#skills .skills .io-container.active-item .skills-intro, #skills .skills .io-container.active-item .dropdown {
+  opacity: 1;
+  transform: translateY(0);
+}
+#skills .skills .io-container.active-item .dropdown {
+  transition-delay: 0.25s;
 }
 #skills .git-img {
   margin: 20vh auto 0;
