--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,7 @@ hamburger
   background: #15191e;
   z-index: -1;
   opacity: 0;
-  transition: 0.5s;
+  transition: 0.25s;
 }
 @media (min-width: 1024px) {
   .header {
@@ -591,13 +591,7 @@ hamburger
   }
 }
 .header.hero-header::after {
-  transform: translateY(-9vh);
-  opacity: 1;
-}
-@media (min-width: 768px) {
-  .header.hero-header::after {
-    transform: translateY(-15vh);
-  }
+  opacity: 0;
 }
 .header.hero-header .navbar #nav .logo {
   transform: translateY(-10vh);
@@ -608,7 +602,6 @@ hamburger
 }
 .header.header-io::after {
   opacity: 1;
-  transform: translateY(0);
 }
 @media (min-width: 1024px) {
   .header.header-io {
@@ -925,8 +918,8 @@ hamburger
     left: 50%;
     transform: translateX(-50%);
     width: 0%;
-    opacity: 0;
     height: 2px;
+    background-color: #ead2a1;
     background-color: #ead2a1;
     transition: 0.3s ease;
   }
