--- a/css/style.css
+++ b/css/style.css
@@ -3201,6 +3201,11 @@ hamburger
   z-index: 2;
   transition: 1.5s;
 }
+.about .col-right .article-container article p span {
+  color: inherit;
+  text-transform: capitalize;
+  display: block;
+}
 @media (min-width: 768px) {
   .about .col-right .article-container article p .title-break {
     display: none;
@@ -3222,12 +3227,12 @@ hamburger
 }
 @media (max-width: 820px) {
   .about .col-right .article-container article p a:active {
-    color: #ead2a1;
+    color: #dc143c;
   }
 }
 @media (min-width: 820px) {
   .about .col-right .article-container article p a:hover {
-    color: #ead2a1;
+    color: #dc143c;
   }
 }
 .about .col-right .article-container article p#intro {
