--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -176,7 +176,11 @@
                     font-weight: 400;
                     z-index: 2;
                     transition: 1.5s;
-                    
+                    span {
+                        color: inherit;
+                        text-transform: capitalize;
+                        display: block;
+                    }
 
                     @include md {
                         .title-break {
@@ -199,12 +203,12 @@
                         transition: .2s;
                         @media (max-width: 820px){
                             &:active {
-                                color: $span-gold;
+                                color: $span-crimson;
                             }
                         }
                         @media (min-width: 820px){
                             &:hover {
-                                color: $span-gold;
+                                color: $span-crimson;
                             }
                         }
                     }
