--- a/css/style.css
+++ b/css/style.css
@@ -2275,7 +2275,7 @@ hamburger
   justify-content: start;
   width: 100%;
   margin: 0 auto;
-  padding: 5vh 0;
+  padding: 5vh 5vw;
   position: relative;
   transform-style: preserve-3d;
 }
@@ -2301,60 +2301,52 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item {
+  border: 2px solid red;
   width: 85%;
+  width: 100%;
   /* height: auto; */
   text-align: center;
-  padding: 0.5em;
   margin: 5vh auto;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
+  gap: 5vw;
   transform: preserve-3d;
-  border: none;
-  outline: none;
+  color: green;
   transition: 0.8s ease;
 }
-@media (min-width: 1024px) {
+@media (min-width: 576px) {
   #contact .contact .contact-items .contact-item {
-    width: 30%;
+    gap: 1rem;
   }
 }
-#contact .contact .contact-items .contact-item[data-scroll] {
-  transition: 1.5s;
-  transform: scale(1);
+#contact .contact .contact-items .contact-item .title {
+  border: 2px solid blue;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: left;
+  justify-content: center;
+  background: #20262e;
+  padding: 1rem;
 }
-#contact .contact .contact-items .contact-item::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(0deg, #20262e, #485563);
-  box-shadow: inset 3px 3px 4px rgba(221, 221, 221, 0.15), inset -3px -3px 4px rgba(0, 0, 0, 0.15), 5px 5px 3px rgba(0, 0, 0, 0.15);
-  border-radius: 10px;
-  z-index: -2;
-  opacity: 1;
-  transition: 0.5s ease;
-}
-#contact .contact .contact-items .contact-item:hover {
-  transform: preserve-3d;
-}
-#contact .contact .contact-items .contact-item h3 {
+#contact .contact .contact-items .contact-item .title i {
+  font-size: 2rem;
+  color: #20262e;
   color: #fff;
-  padding: 0.5rem 0.5rem 0;
-  margin: 0.5rem auto 0;
+  padding: 0.5rem;
+  border-radius: 50%;
+}
+#contact .contact .contact-items .contact-item .title h3 {
+  color: #20262e;
+  color: #fff;
   font-size: 1.25rem;
-  width: 70%;
   font-weight: 600;
   position: relative;
 }
 @media (min-width: 768px) {
-  #contact .contact .contact-items .contact-item h3 {
+  #contact .contact .contact-items .contact-item .title h3 {
     font-size: 1.25rem;
-    margin: 0.5em auto;
   }
 }
 #contact .contact .contact-items .contact-item .icon {
@@ -2388,19 +2380,14 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item .contact-info {
-  width: 15rem;
+  border: 2px solid green;
 }
 #contact .contact .contact-items .contact-item .contact-info p {
   font-size: 0.9rem;
-  font-weight: 400;
-  letter-spacing: 0.05rem;
-  padding: 0.5rem;
-  border: none;
-  outline: none;
-  border-radius: 0.5rem;
+  font-weight: 500;
   margin: 0.5em auto;
-  color: #000;
   color: #fff;
+  color: #20262e;
   transition: 0.5s ease;
   position: relative;
   z-index: -1;
@@ -2424,13 +2411,13 @@ hamburger
   display: block;
   width: 100%;
   font-size: 0.95rem;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
   padding: 0.7rem;
   border-radius: 0.5rem;
-  margin: 0.5rem auto;
-  color: rgba(255, 255, 255, 0.7);
+  color: #f4f4f4;
+  text-transform: capitalize;
   cursor: pointer;
-  transition: 0.3s ease;
+  transition: 0.25s ease;
   position: relative;
   isolation: isolate;
 }
@@ -2443,7 +2430,7 @@ hamburger
   height: 100%;
   border-radius: 0.5rem;
   background: #dc143c;
-  transition: 0.2s;
+  transition: 0.25s;
   z-index: -1;
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
@@ -2482,8 +2469,8 @@ hamburger
 #contact .contact .contact-items .contact-item .contact-info a i {
   font-size: 1rem;
   position: relative;
-  transform: translateY(100%);
-  opacity: 0;
+  opacity: 1;
+  margin-left: 0.5rem;
   transition: 1s ease;
   transition-delay: 0.15s;
 }
