--- a/css/style.css
+++ b/css/style.css
@@ -2275,7 +2275,7 @@ hamburger
   justify-content: start;
   width: 100%;
   margin: 0 auto;
-  padding: 5vh 5vw;
+  padding: 0vh 5vw 5vh;
   position: relative;
   transform-style: preserve-3d;
 }
@@ -2283,7 +2283,7 @@ hamburger
   width: 100%;
   height: auto;
   background: #fff;
-  margin-bottom: 50px;
+  margin-bottom: 5vh;
   z-index: 10;
 }
 #contact .contact .contact-items {
@@ -2297,23 +2297,25 @@ hamburger
     justify-content: space-between;
     flex-wrap: nowrap;
     padding: 0 5vw;
+    padding: 0 0;
     margin: 0 auto;
   }
 }
 #contact .contact .contact-items .contact-item {
-  border: 2px solid red;
   width: 85%;
   width: 100%;
   /* height: auto; */
   text-align: center;
+  border-radius: 0.5rem;
   margin: 5vh auto;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   position: relative;
-  gap: 5vw;
+  gap: 1rem;
   transform: preserve-3d;
-  color: green;
+  overflow: hidden;
+  color: #20262e;
   transition: 0.8s ease;
 }
 @media (min-width: 576px) {
@@ -2322,13 +2324,20 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item .title {
-  border: 2px solid blue;
   display: flex;
   flex-direction: column-reverse;
   align-items: left;
-  justify-content: center;
+  justify-content: space-evenly;
   background: #20262e;
-  padding: 1rem;
+  padding: 0.5rem;
+  flex-basis: 30%;
+  border-radius: 0.5rem;
+}
+@media (min-width: 768px) {
+  #contact .contact .contact-items .contact-item .title {
+    flex-basis: 40%;
+    align-items: center;
+  }
 }
 #contact .contact .contact-items .contact-item .title i {
   font-size: 2rem;
@@ -2337,20 +2346,27 @@ hamburger
   padding: 0.5rem;
   border-radius: 50%;
 }
+@media (min-width: 576px) {
+  #contact .contact .contact-items .contact-item .title i {
+    font-size: 1.5rem;
+  }
+}
 #contact .contact .contact-items .contact-item .title h3 {
   color: #20262e;
   color: #fff;
-  font-size: 1.25rem;
+  font-size: 0.8rem;
   font-weight: 600;
   position: relative;
 }
 @media (min-width: 768px) {
   #contact .contact .contact-items .contact-item .title h3 {
-    font-size: 1.25rem;
+    font-size: 1rem;
+    margin: 0.5em auto 0;
   }
 }
 #contact .contact .contact-items .contact-item .icon {
   margin: 5px auto 10px auto;
+  margin: 0.5rem auto;
   padding: 0.3em 0.7em;
   height: 4em;
   width: 4em;
@@ -2370,26 +2386,24 @@ hamburger
 }
 @media (min-width: 768px) {
   #contact .contact .contact-items .contact-item .icon {
-    height: 80px;
-    width: 80px;
+    height: 4rem;
+    width: 4rem;
     margin: 0;
     padding: 0;
   }
-  #contact .contact .contact-items .contact-item .icon i {
-    font-size: 2em;
-  }
 }
 #contact .contact .contact-items .contact-item .contact-info {
-  border: 2px solid green;
+  flex-basis: 70%;
 }
 #contact .contact .contact-items .contact-item .contact-info p {
   font-size: 0.9rem;
   font-weight: 500;
-  margin: 0.5em auto;
+  margin-bottom: 0.5rem;
   color: #fff;
   color: #20262e;
   transition: 0.5s ease;
   position: relative;
+  text-align: left;
   z-index: -1;
 }
 #contact .contact .contact-items .contact-item .contact-info p span {
@@ -2402,14 +2416,13 @@ hamburger
 @media (min-width: 768px) {
   #contact .contact .contact-items .contact-item .contact-info p {
     width: 100%;
-    text-align: center;
     margin: 0.5em auto;
     font-size: 0.9em;
   }
 }
 #contact .contact .contact-items .contact-item .contact-info a {
   display: block;
-  width: 100%;
+  width: 10rem;
   font-size: 0.95rem;
   letter-spacing: 0.05rem;
   padding: 0.7rem;
