--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -7,7 +7,7 @@
         width: 100%;
         margin: 0 auto;
         // padding-bottom: 30px;
-        padding: 5vh 5vw;
+        padding: 0vh 5vw 5vh;
         position: relative;
         transform-style: preserve-3d;
         // border: 2px solid red;
@@ -16,7 +16,7 @@
             width: 100%;
             height: auto;
             background: $background-light;
-            margin-bottom: 50px;
+            margin-bottom: 5vh;
             z-index: 10;
         }
         // end of section-title
@@ -24,23 +24,25 @@
         .contact-items {
             width: 100%;
             @media (min-width: 1024px){
+                // border: 2px solid red;
                 width: 100%;
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 flex-wrap: nowrap;
                 padding: 0 5vw;
+                padding: 0 0;
                 margin: 0 auto;
             }
             // contact-item
             .contact-item {
-                border: 2px solid red;
+                // border: 2px solid $overlay-blue-darker;
             // tablet to desktop
                 width: 85%;
                 width: 100%;
                 /* height: auto; */
                 text-align: center;
-                // border-radius: 10px;
+                border-radius: .5rem;
                 // padding: .5em;
                 margin: 5vh auto;
                 display: flex;
@@ -48,24 +50,31 @@
                 justify-content: flex-start;
                 align-items: center;
                 position: relative;
-                gap: 5vw;
+                gap: 1rem;
                 transform: preserve-3d;
+                overflow: hidden;
                 // border: none;
                 // outline: none;
                 // transform: scale(.9);
-                color: green;
+                color: $overlay-blue-darker;
                 transition: .8s ease;
                 @include sm {
                     gap: 1rem;
                 }
                 .title {
-                    border: 2px solid blue;
+                    // border: 2px solid blue;
                     display: flex;
                     flex-direction: column-reverse;
                     align-items: left;
-                    justify-content: center;
+                    justify-content: space-evenly;
                     background: $overlay-blue-darker;
-                    padding: 1rem;
+                    padding: .5rem;
+                    flex-basis: 30%;
+                    border-radius: .5rem;
+                    @include md {
+                        flex-basis: 40%;
+                        align-items: center;
+                    }
 
                     i {
                         font-size: 2rem;
@@ -73,6 +82,9 @@
                         color: #fff;
                         padding: .5rem;
                         border-radius: 50%;
+                        @include sm {
+                            font-size: 1.5rem;
+                        }
                     }
 
                     h3 {
@@ -80,14 +92,14 @@
                         color: #fff;
                         // padding: .5rem .5rem 0;
                         // margin: .5rem auto 0;
-                        font-size: 1.25rem;
+                        font-size: .8rem;
                         // width: 70%;
                         font-weight: 600;
                         position: relative;
 
                         @media (min-width: 768px) {
-                            font-size: 1.25rem;
-                            // margin: .5em auto;
+                            font-size: 1rem;
+                            margin: .5em auto 0;
                         }
 
                     }
@@ -97,6 +109,7 @@
                 // ITEM ICON
                 .icon {
                     margin: 5px auto 10px auto;
+                    margin: .5rem auto;
                     padding: .3em .7em;
                     height: 4em;
                     width: 4em;
@@ -115,31 +128,31 @@
                         transition: .5s ease;
                     }
                     @media (min-width: 768px) {
-                        height: 80px;
-                        width: 80px;
+                        height: 4rem;
+                        width: 4rem;
                         // margin: .3em auto;
                         margin: 0;
                         padding: 0;
-
-                        i {
-                            font-size: 2em;
-                        }
                     }
                 }
                 // of end of item icon
                 // CONTACT DETAILS
                 .contact-info {
-                    // width: 15rem;
-                    border: 2px solid green;
+                    // width: 100%;
+                    flex-basis: 70%;
+                    // border: 2px solid green;
+                    
                     p {
                         font-size: .9rem;
                         font-weight: 500;
                         // background: $background-light;
-                        margin: .5em auto;
+                        // margin: .5em auto;
+                        margin-bottom: .5rem;
                         color: #fff;
                         color: $overlay-blue-darker;
                         transition: .5s ease;
                         position: relative;
+                        text-align: left;
                         z-index: -1;
 
                         span {
@@ -152,7 +165,7 @@
                         
                         @media (min-width: 768px){
                             width: 100%;
-                            text-align: center;
+                            // text-align: center;
                             margin: .5em auto;
                             font-size: .9em;
                         }
@@ -161,7 +174,7 @@
                     // LINK
                     a {
                         display: block;
-                        width: 100%;
+                        width: 10rem;
                         font-size: .95rem;
                         letter-spacing: .05rem;
                         padding: .7rem;
